# es_pcs_26

esercitazione1/: CMakeLists.txt  medieT  medieT.cpp  print_args.cpp
esercitazione2/: CMakeLists.txt  algoritmo.cpp  es_array.cpp  spiegazione.txt
esercitazione3/: CMakeLists.txt  rational  rational.cpp  rational.hpp
esercitazione4/: bubblesort.hpp  measure_sorts.cpp  selectionsort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  bubblesort.hpp  commento.txt  insertionsort.hpp  measure_sorts.cpp  merge.hpp  mergesort.hpp  partizione.hpp  quicksort.hpp  selectionsort.hpp  sorted.hpp  test_mergesort.cpp  test_quicksort.cpp
